--- a/scripts/makepkg.sh.in
+++ b/scripts/makepkg.sh.in
@@ -96,6 +96,7 @@ PACMAN_OPTS=
 shopt -s extglob
 
 source $LIBRARY/downloads.sh
+source $LIBRARY/extractions.sh
 source $LIBRARY/utils.sh
 
 # PROGRAM START
